# minidir

./: README.md  pyproject.toml
minidir/: __init__.py
pydir/: dir.py
src/: minidir.py
tests/: test_dir.py  test_minidir.py
