[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidir"
version = "0.1.1"
authors = [
  { name="Weida Hong", email="wdhongtw@gmail.com" },
]
description = " Minimal directory interface and some implementations"
keywords = [
  "filesystem",
  "directory",
  "fake",
  "testing",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

[project.urls]
"Homepage" = "https://github.com/wdhongtw/minidir"

[tool.hatch.build]
sources = ["src"]
